--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-      "name": "Voice-Driven AI Interface Design",
+      "name": "voice-driven-ai-interface-design",
       "version": "0.1.0",
       "private": true,
+      "type": "module",
       "dependencies": {
             "@radix-ui/react-accordion": "^1.2.3",
             "@radix-ui/react-alert-dialog": "^1.1.6",
