--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
       "name": "voice-driven-ai-interface-design",
-      "version": "1.3.30",
+      "version": "1.3.31",
       "private": true,
       "type": "module",
       "dependencies": {
@@ -36,7 +36,7 @@
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
             "lucide-react": "^0.487.0",
-            "motion": "*",
+            "framer-motion": "^11.0.0",
             "next-themes": "^0.4.6",
             "openai": "^6.16.0",
             "react": "^18.3.1",
